abgabe/styles.css
body {
    font-family     : "Semikolon", sans-serif;
    font-size       : 19.2px;
    background-color: #f7f6f5;
    margin          : 30px;
}

#canvas {
    background-image : url(assets/background.png);
    background-size  : 100% 50%;
    background-repeat: repeat-y;
    width            : 1200px;
    height           : 650px;
}

.cp_intro,
.cp_section {
    padding      : 10px 20px;
    border-radius: 7px;
    margin-top   : 15px;
    height       : fit-content;
}

.cp_intro {
    background-color: #ecf4e9;
    border          : 1px solid #d9e3d5;
}

.cp_section {
    background-color: #fff;
    border          : 1px solid #eee;
}

h1,
h2 {
    color      : #40752d;
    font-weight: 700;
    padding    : 0px;
    margin     : 0px 0px 10px 0px;
}

h1 {
    font-size: 40px;
}

h2 {
    width        : 100%;
    font-size    : 29px;
    border-bottom: 1px solid #75742d;
}

.quote {
    font-style: italic;
    padding   : 10px;
}

li {
    line-height: 30px;
}

.equation-box {
    justify-content: space-between;
    display        : flex;
    max-width      : 1100px;
    padding-left   : 10px;
}

.space-box {
    justify-content: space-around;
    display        : flex;
}

.game-text {
    padding       : 15px 0;
    font-weight   : 600;
    font-size     : 23px;
    text-align    : center;
    letter-spacing: 1.2px;
    font-family   : "Mono", monospace;
}

.game-box {
    width           : 1200px;
    max-height      : 800px;
    margin          : 20px 10px;
    border-radius   : 5% 5% 0 0;
    background-color: #1b1b1b;
    border          : 1px solid #eee;
    color           : #dbdbdb;
    position        : relative;
    user-select     : none;
}

#startStopButton {
    width     : 115px;
    text-align: center;
}

.game-button {
    background-color: #40752d;
    border-radius   : 0 0 10px 10px;
    padding         : 10px 20px;
    height          : fit-content;
    margin          : auto;
    margin-bottom   : 10px;
    cursor          : pointer;
    transition      : background-color .4s;
    font-size       : 25px;
    user-select     : none;
}

.game-button:hover {
    background-color: #47892f;
}

.sign-buttons {
    position     : absolute;
    width        : fit-content;
    display      : none;
    padding      : 7px 7px;
    border-radius: 10px;
    font-weight  : 700;
    margin-left  : 40px;
    z-index      : 2;
}

.sign-button {
    text-align-last : center;
    font-size       : 20px;
    height          : 25px;
    width           : 25px;
    cursor          : pointer;
    margin          : 0 5px;
    background-color: #1B1B1D;
    display         : inline-block;
    padding         : 3px 3px 0;
    border          : #dbdbdb 1px solid;
}

.sign-button:hover {
    background-color: #3d3d42;
}

.game {
    position: relative;
}

.overlay {
    width           : 100%;
    height          : 100%;
    position        : absolute;
    top             : 0;
    left            : 0;
    background-color: #00000000;
    display         : none;
    user-select     : none;
    z-index         : 1;
}

#infoOverlay {
    background-color: #000000d4;
    border-radius   : 5% 5% 0 0;
    display         : none;
}

#signOverlay {
    background-color: #00000099;
}

#feedbackOverlay {
    border-radius   : 10px 0 0 0;
    position        : absolute;
    z-index         : 1;
    display         : none;
    padding         : 20px 50px 20px 20px;
    height          : 110px;
    background-color: #c3c3c3;
    width           : 400px;
    padding         : 20px 120px 20px 20px;
    bottom          : 0;
    right           : 0;
    color           : #000;
    text-align      : center;
    font-size       : 25px;
}

.cow {
    position: absolute;
    bottom  : 0;
    right   : 0;
    z-index : 1;
    display : none;
}

#illCow,
#sadCow {
    bottom: 15px;
}

#infoOverlay>div {
    margin     : 150px auto;
    display    : block;
    width      : 50%;
    padding    : 50px;
    line-height: 2;
}

#startGameButton {
    background-color: #40752d;
    border-radius   : 10px 0 0 0;
    width           : fit-content;
    padding         : 5px 25px;
    font-size       : 40px;
    float           : right;
    position        : absolute;
    bottom          : 0;
    right           : 0;
    margin-bottom   : auto;
}

#startGameButton:hover {
    background-color: #47892f;
}

